Resolve #9: add Error Handling middleware
