# src/controller/userController.ts
@@ -9,9 +9,12 @@ import {
     Route,
     Security,
     Tags,
+    Response,
+    SuccessResponse,
 } from "tsoa";
 import { User, CreateUserModel, UpdateUserModel } from "../model/userModel";
 import { UserService } from "../service/userService";
+import AppError from "../utils/appError";
 
 const userService = new UserService
 
@@ -20,9 +23,12 @@ const userService = new UserService
 export class UserController extends Controller {    
     @Post()
     @Security("jwt")
+    @SuccessResponse("201", "Created")
+    @Response<AppError>(401, "Unauthorized")
     public async createUser(
         @Body() requestBody: CreateUserModel
     ): Promise<User> {
+        this.setStatus(201);
         const result = await userService.createUser(requestBody)
         return result;
     }
@@ -35,6 +41,7 @@ export class UserController extends Controller {
     }
 
     @Get("id/{id}")
+    @Response<AppError>(404, "Not Found")
     public async getUserById(
         @Path() id: number,
     ): Promise<User> {
@@ -43,6 +50,7 @@ export class UserController extends Controller {
     }
 
     @Get("email/{email}")
+    @Response<AppError>(404, "Not Found")
     public async getUserByEmail(
         @Path() email: string,
     ): Promise<User> {
@@ -51,6 +59,7 @@ export class UserController extends Controller {
     }
 
     @Put("{id}")
+    @Response<AppError>(404, "Not Found")
     public async updateUser(
         @Path() id: number,
         @Body() requestBody: UpdateUserModel
@@ -60,6 +69,7 @@ export class UserController extends Controller {
     }
 
     @Delete("{id}")
+    @Response<AppError>(404, "Not Found")
     public async deleteUserById(
         @Path() id: number,
     ): Promise<User> {
@@ -68,6 +78,7 @@ export class UserController extends Controller {
     }
 
     @Put("{id}/restore")
+    @Response<AppError>(404, "Not Found")
     public async restoreUserById(
         @Path() id: number,
     ): Promise<User> {
